--- a/Task 1/Linear_Regression_Model_trained_to_predict_life_satisfaction_score_based_on_gdp_values_of_countries_.ipynb
+++ b/Task 1/Linear_Regression_Model_trained_to_predict_life_satisfaction_score_based_on_gdp_values_of_countries_.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Linear Regression Model trained to predict life satisfaction score based on gdp values of countries .ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -1986,13 +1987,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "a83df91f-7f59-4f4e-d788-15e8d6fb587f"
+        "outputId": "3ec67b07-deaf-4fdf-b7c8-e6a9f5cb0841"
       },
       "source": [
         "country_Life_Satisfactiondf.plot.scatter(x=\"2015\", y=\"Value\")\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2050,12 +2051,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d6000272-1b5f-4548-b009-63277609d381"
+        "outputId": "d8b0cfce-7987-4070-a454-fd2e2861b883"
       },
       "source": [
         "linear_regression_model.fit(X,Y)"
       ],
-      "execution_count": 34,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2067,7 +2068,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 48
         }
       ]
     },
@@ -2089,7 +2090,7 @@
         "colab": {}
       },
       "source": [
-        "X_new = [[22587]]"
+        "X_new = [[22587]] # GDP_ per capita information for the country Cyprus"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2116,7 +2117,7 @@
         "outputId": "b40e4580-db4c-4d99-9628-a31ef60b1fe8"
       },
       "source": [
-        "print(linear_regression_model.predict(X_new))"
+        "print(linear_regression_model.predict(X_new)) # Average score of Life Satisfaction computed"
       ],
       "execution_count": 41,
       "outputs": [
